--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@fastify/multipart": "^8.3.1",
     "@libsql/client": "^0.14.0",
     "@qdrant/js-client-rest": "^1.17.0",
+    "@types/pdf-parse": "^1.1.5",
     "better-sqlite3": "^12.6.2",
     "dotenv": "^16.4.5",
     "execa": "^9.6.1",
@@ -21,7 +22,7 @@
     "groq-sdk": "^0.37.0",
     "jimp": "^1.6.0",
     "p-queue": "^8.1.1",
-    "pdfjs-dist": "^5.4.624",
+    "pdf-parse": "^2.4.5",
     "pino-pretty": "^13.1.3",
     "sharp": "^0.34.5",
     "tesseract.js": "^7.0.0",
