feat: add hybrid search with semantic embeddings and UI integration
- Add Qdrant vector store for semantic search with chunk embeddings
- Implement hybrid ranking combining keyword (FTS) and semantic search
- Add search UI with filters and result highlighting in canvas
- Migrate FTS table from contentless to normal for JOIN compatibility
- Integrate search bar into top navigation with responsive sidebar toggle
- Add file deletion cleanup for vector store consistency
- Include reindexing endpoint for back-filling existing files

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ storage/db/*.sqlite-wal
 storage/db/knowledge.sqlite
 storage/files/
 storage/thumbnails/
-
+storage/db/qdrant
 # Logs
 logs/
 *.log
