--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "app"
+name = "canvaintel"
 version = "0.1.0"
-description = "A Tauri App"
+description = "CanvaIntel Desktop App"
 authors = ["you"]
 license = ""
 repository = ""
@@ -15,11 +15,11 @@ name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.5.4" }
+tauri-build = { version = "2.5.4", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.10.0" }
+tauri = { version = "2.10.0", features = [] }
 tauri-plugin-log = "2"
